# BrandRadar

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .golangci.yml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
backend/config/: config.yml
backend/migrations/: 000001_projects_brands_sources.down.sql  000001_projects_brands_sources.up.sql  000002_mentions.up.sql  000003_alerts.down.sql  000003_alerts.up.sql  000004_events.up.sql  (+15 more)
frontend/: .prettierrc  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  server.js  tailwind.config.ts  vitest.config.ts
ml/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  train.sh
ml/eda/: eda_relevance.ipynb  eda_sentiment.ipynb  relevance.py  sentiment.py
ml/src/: s3config.py
ml/src/dataset/: downlaod_raw.py  prepare_relevance.py  preprocess_sentiment.py
ml/src/models/clusterisation/: example.py  model.py  save.py
ml/src/models/clusterisation/configs/: dev_config.yml  prod_config.yml  remove_tokens.txt  stopwords_ru_domain.txt
ml/src/models/relevance/: dev.py  eval.py  model.py  train.py
ml/src/models/relevance/configs/: dev_config.yml  prod_config.yml
ml/src/models/sentimental/: dev.py  eval.py  model.py  train.py
ml/src/models/sentimental/configs/: dev_config.yml  prod_config.yml
ml/src/server/: schemas.py  server.py
ml/src/server/handlers/: __init__.py  clusterization.py  health.py  relevance.py  sentiment.py
(+214 files in other folders)
